Changes made following the challenge wrap up. I solved it in a different way for the same outcome prior to this commit.

--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -3,9 +3,3 @@
     margin: 0 auto;
     padding: 0 $m-size;
 }
-
-// dark-blue with value of #333745
-// use as the body background
-.body {
-    background: $dark-blue;
-}
